# zortbit

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray.rgba
src-tauri/ocr/: zb_ocr.swift
src-tauri/src/: config.rs  db.rs  engine.rs  main.rs  mover.rs  ocr.rs
