[package]
name = "zortbit"
version = "0.1.0"
edition = "2021"
description = "Local-first AI file organizer"
authors = ["Christopher Herrera Magana"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify-debouncer-full = "0.3"
dirs = "5"
ureq = { version = "2", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
pdf-extract = "0.7"

[profile.dev]
incremental = true
